@@ -1,8 +1,10 @@
 CHANGES IN VERSION 0.6.5
 ------------------------
  o see also mapping vignette in ?mapToGenome [2015-02-20 Fri]
- o calculateHeavyLabels, isCleaved, proteotypic and proteinCoverage are
-   is now a function [2015-02-20 Fri]
+ o calculateHeavyLabels, isCleaved, proteotypic and proteinCoverage
+   are is now a function [2015-02-20 Fri]
+ o added accessors to Pbase:::pplot() and update Pbase-data vignette
+   accordingly [2015-02-21 Sat]
  
 CHANGES IN VERSION 0.6.4
 ------------------------
